fixed fixed bg on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,22 @@
-html {
-    background: url('../../assets/img/bg.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 body {
-    background: #FFF;
     color: #FFF;
     font-size: 14px;
-    background: url('../../assets/img/bg.jpg') fixed;
-    background-repeat: no-repeat;
-    background-position: right -45px top 0px
+}
+
+img#bg{
+  /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: -1;
 }
 
 h1 {
@@ -65,6 +69,7 @@ a:visited, a:hover{
 .nav-pills>li.active>a{
     color: #fff;
     background-color: rgba(0, 0, 0, .5);
+    min-width: 70px;
 }
 
 .nav>li>a:focus, .nav>li>a:hover {
@@ -207,6 +212,9 @@ footer p {
     width: 100%;
 }
 
+@media screen and (max-width: 767px) {
+
+}
 
 @media screen and (max-width: 767px) {
     .wrapper-name, .wrapper-email {
